overflowing wrap fix

--- a/CSS/about.css
+++ b/CSS/about.css
@@ -8,16 +8,18 @@ body {
 }
 
 #box {
-    width: 46rem;
+    width: 45rem;
     height: 27rem;
     border: 3px solid white;
     border-radius: 6px;
-    overflow:hidden;
     background-color: black;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
-    overflow-wrap: break-word; 
-    box-sizing:border-box;
+    box-sizing:border-box; 
+}
+
+#box p {
+    overflow-wrap: break-word;  
 }
 
 .flex {
